--- a/badge/by-organization/organizationhash-x.html
+++ b/badge/by-organization/organizationhash-x.html
@@ -75,7 +75,7 @@
 		</div>
 		<div class="row">
 			<div class="large-12 columns">
-				<ul class="small-block-grid-2 large-block-grid-4 badge-thumbs square grid">
+				<ul class="small-block-grid-2 large-block-grid-4 badge-thumbs square grid js">
 				  <li>
 				  	<a class="badgethumb badgehash-a" href="#" style="background-image:url('../../img/badge/badgehash-a-m.png');">
 						<span class="detail">
