--- a/collection/index.html
+++ b/collection/index.html
@@ -52,7 +52,7 @@
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 large-block-grid-4 collection-thumbs square grid">
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
@@ -65,7 +65,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-d-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-e-s.png');"></span>
@@ -78,7 +78,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-g-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-h-s.png');"></span>
@@ -91,7 +91,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-j-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-k-s.png');"></span>
@@ -104,7 +104,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-c-s.png');"></span>
@@ -117,7 +117,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-l-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
@@ -130,7 +130,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-d-s.png');"></span>
@@ -143,7 +143,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-f-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
@@ -156,7 +156,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-d-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
@@ -169,7 +169,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-a-s.png');"></span>
@@ -182,7 +182,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-k-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-l-s.png');"></span>
@@ -195,7 +195,7 @@
 				  	</a>
 				  </li>
 				  <li>
-				  	<a class="collectionthumb collectionhash-a" href="#">
+				  	<a class="collectionthumb collectionhash-a collection" href="#">
 				  		<span class="minithumbs">
 					  		<span class="minithumb minithumb-1" style="background-image:url('../img/badge/badgehash-g-s.png');"></span>
 					  		<span class="minithumb minithumb-2" style="background-image:url('../img/badge/badgehash-b-s.png');"></span>
