--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<h3>Collections</h2>
 			<ul class="small-block-grid-1 large-block-grid-3 collections grid">
 				<li>
-					<ul class="badge-thumbs vertical collectionhash-a">
+					<ul class="badge-thumbs vertical collectionhash-a collection">
 						<h5><span class="title">Collection Alpha</span></h5>
 						<li>
 							<a class="badgethumb badgehash-h" href="#" style="background-image:url('./img/badge/badgehash-i-s.png');">
@@ -161,11 +161,12 @@
 							</a>
 						</li>	
 						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
-						<a href="./collection/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
+						<a class="collection_action cedi collectionhash-c" href="./badge/by-collection/collectionhash-x#edit=true">Edit</a>	
+						<a href="./userhash/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 				<li>
-					<ul class="badge-thumbs vertical collectionhash-b">
+					<ul class="badge-thumbs vertical collectionhash-b collection">
 						<h5><span class="title">Collection Beta</span></h5>
 						<li>
 							<a class="badgethumb badgehash-d" href="#" style="background-image:url('./img/badge/badgehash-f-s.png');">
@@ -192,11 +193,12 @@
 							</a>
 						</li>
 						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
-						<a href="./collection/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
+						<a class="collection_action cedi collectionhash-c" href="./badge/by-collection/collectionhash-x#edit=true">Edit</a>	
+						<a href="./userhash/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 				<li>
-					<ul class="badge-thumbs vertical collectionhash-c">
+					<ul class="badge-thumbs vertical collectionhash-c collection">
 						<h5><span class="title">Collection Gamma</span></h5>
 						<li>
 							<a class="badgethumb badgehash-d" href="#" style="background-image:url('./img/badge/badgehash-d-s.png');">
@@ -231,7 +233,8 @@
 							</a>
 						</li>
 						<a class="collection_action cdel collectionhash-c" href="#">Delete</a>
-						<a href="./collection/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
+						<a class="collection_action cedi collectionhash-c" href="./badge/by-collection/collectionhash-x#edit=true">Edit</a>	
+						<a href="./userhash/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
 			</ul>
