--- a/userhash/collectionhash-x.html
+++ b/userhash/collectionhash-x.html
@@ -56,7 +56,9 @@
 			  			<span class="title">Badge A</span>
 			  			<span class="content">Issued by <em>Organization A</em> three days ago.</span>
 			  			<br><br>
-			  			User description user description user description user description user description user description user description user description user description user description user description user description user description user description user description user description user description user description user description.
+			  			<strong>User's description:</strong>
+			  			<br>
+			  			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 			  		</span>
 			  	</p>
 			  </li>
@@ -114,7 +116,9 @@
 			  			<span class="title">Badge H</span>
 			  			<span class="content">Issued by <em>Organization A</em> three days ago.</span>
 			  			<br><br>
-			  			User description user description user description user description user description user description user description user description user description user description.
+			  			<strong>User's description:</strong>
+			  			<br>
+			  			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 			  		</span>
 			 	</a>
 			 </li>
