--- a/issuer-3.html
+++ b/issuer-3.html
@@ -52,7 +52,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 			<h4>Choose which badges to accept:</h2>
-			<ul class="small-block-grid-1 large-block-grid-1 grid badge-thumbs vertical">
+			<ul class="small-block-grid-1 large-block-grid-1 grid badge-thumbs vertical js">
 				<li>
 					<div class="badgethumb badgehash-a" href="#" style="background-image:url('./img/badge/badgehash-a-s.png');">
 						<span class="detail">
