return false on cedi click

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							</a>
 						</li>	
 						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
-						<a class="collection_action cedi collectionhash-c" href="./badge/by-collection/collectionhash-x#edit=true">Edit</a>	
+						<a class="collection_action cedi collectionhash-c" href="#">Edit</a>	
 						<a href="./userhash/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
@@ -193,7 +193,7 @@
 							</a>
 						</li>
 						<a class="collection_action cdel collectionhash-b" href="#">Delete</a>
-						<a class="collection_action cedi collectionhash-c" href="./badge/by-collection/collectionhash-x#edit=true">Edit</a>	
+						<a class="collection_action cedi collectionhash-c" href="#">Edit</a>	
 						<a href="./userhash/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
@@ -233,7 +233,7 @@
 							</a>
 						</li>
 						<a class="collection_action cdel collectionhash-c" href="#">Delete</a>
-						<a class="collection_action cedi collectionhash-c" href="./badge/by-collection/collectionhash-x#edit=true">Edit</a>	
+						<a class="collection_action cedi collectionhash-c" href="#">Edit</a>	
 						<a href="./userhash/collectionhash-x.html" target="_blank" class="collection_action csha collectionhash-b" href="#">Share</a>
 					</ul>
 				</li>
@@ -242,7 +242,6 @@
 	</div>
 	
 	<footer>
-
 	</footer>
 
   <script>
